--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My HTML Page</title>
+    <title>Broken Images</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>This is a simple HTML page hosted on GitHub Pages.</p>
+    <h1>Broken Images</h1>
+    <p>This is a simple HTML page with broken images</p>
+    <img src="unavailable.jpg" />
 </body>
 </html>
